--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "animate.css": "^4.1.1",
     "clsx": "^2.1.1",
     "next": "15.1.6",
     "react": "^19.0.0",
