--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,4 +1,12 @@
 {
+  "main": ".open-next/worker.js",
+  "name": "lagom",
+  "compatibility_date": "2024-09-23",
+  "compatibility_flags": ["nodejs_compat"],
+  "assets": {
+    "directory": ".open-next/assets",
+    "binding": "ASSETS",
+  },
   "kv_namespaces": [
     {
       "binding": "lagom",
